--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </section>
 
       <!-- Чим ми займаємося -->
-      <section class="section section--no-pudding-top">
+      <section class="section section--no-pudding-top section--display-none">
         <div class="container">
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="activities">
