--- a/index.html
+++ b/index.html
@@ -150,19 +150,14 @@
           <ul class="team">
             <li class="team__item">
               <!-- <img src="./images/demyanenko.jpeg" alt="Ігор Дем'яненко" width="270" /> -->
-              <img
-                srcset="
-                  ./images/demyanenko_sm-450@1x.jpg 450w,
-                  ./images/demyanenko_sm-900@2x.jpg 900w,
-                  ./images/demyanenko_md-354@1x.jpg 354w,
-                  ./images/demyanenko_md-708@2x.jpg 708w,
-                  ./images/demyanenko_lg-270@2x.jpg 270w,
-                  ./images/demyanenko_lg-540@1x.png 540w
-                "
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
-                src="./images/demyanenko_sm-450@1x.jpg"
-                alt="Ігор Дем'яненко"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/demyanenko_lg-@1x.jpg 1x, ./images/demyanenko_lg-@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <img src="./images/demyanenko_lg-@1x.jpg" alt="Ігор Дем'яненко" />
+              </picture>
 
               <div class="team__box">
                 <h3 class="team__title">Ігор Дем'яненко</h3>
