--- a/index.html
+++ b/index.html
@@ -731,40 +731,37 @@
     <!-- Mobile menu -->
     <div class="menu-container js-menu-container" id="mobile-menu">
       <button class="menu-toggle js-close-menu">
-        <svg width="40" height="40">
+        <svg class="menu-toggle__icon" width="40" height="40">
           <use href="./images/icons.svg#menu-close"></use>
         </svg>
       </button>
 
-      <ul class="mobile-menu list">
+      <ul class="mobile-menu">
         <li>
-          <a href="" class="link">About</a>
+          <a href="" class="mobile-menu__link">Студія</a>
         </li>
         <li>
-          <a href="" class="link">Products</a>
+          <a href="" class="mobile-menu__link">Портфоліо</a>
         </li>
         <li>
-          <a href="" class="link">Contacts</a>
-        </li>
-        <li>
-          <a href="" class="link">Career</a>
+          <a href="" class="mobile-menu__link">Контакти</a>
         </li>
       </ul>
 
-      <ul class="list">
+      <ul class="mobile-contacts">
         <li>
-          <a href="" class="link">+38 096 111 11 11</a>
+          <a href="" class="mobile-contacts__link">+38 096 111 11 11</a>
         </li>
         <li>
-          <a href="" class="link">info@devstudio.com</a>
+          <a href="" class="mobile-contacts__link">info@devstudio.com</a>
         </li>
       </ul>
 
-      <ul class="mobile-socials list">
-        <li><a href="" class="link">Instagram </a></li>
-        <li><a href="" class="link">Twitter</a></li>
-        <li><a href="" class="link">Facebook</a></li>
-        <li><a href="" class="link">LinkedIn</a></li>
+      <ul class="mobile-socials">
+        <li><a href="#" class="mobile-socials__link">Instagram </a></li>
+        <li><a href="#" class="mobile-socials__link">Twitter</a></li>
+        <li><a href="#" class="mobile-socials__link">Facebook</a></li>
+        <li><a href="#" class="mobile-socials__link">LinkedIn</a></li>
       </ul>
     </div>
 
@@ -778,3 +775,36 @@
     <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
+
+<!-- <nav class="nav">
+          <a href="./index.html" class="logo logo--header-indent"
+            >Web<span class="logo__dark">Studio</span>
+          </a>
+          <ul class="site-nav">
+            <li class="site-nav__item">
+              <a href="./index.html" class="site-nav__link site-nav__link--current">Студія</a>
+            </li>
+            <li class="site-nav__item">
+              <a href="./portfolio.html" class="site-nav__link">Портфоліо</a>
+            </li>
+            <li class="site-nav__item"><a href="#" class="site-nav__link">Контакти</a></li>
+          </ul>
+        </nav>
+
+        <ul class="contacts header__contacts">
+          <li class="contacts__item">
+            <a href="mailto:info@devstudio.com" class="contacts__link">
+              <svg class="contacts__icon" width="16" height="12">
+                <use href="./images/icons.svg#envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts__item">
+            <a href="tel:+380961111111" class="contacts__link">
+              <svg class="contacts__icon" width="10" height="16">
+                <use href="./images/icons.svg#smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul> -->
