--- a/index.html
+++ b/index.html
@@ -738,22 +738,24 @@
 
       <ul class="mobile-menu">
         <li>
-          <a href="" class="mobile-menu__link">Студія</a>
+          <a href="#" class="mobile-menu__link mobile-menu__link--current">Студія</a>
         </li>
         <li>
-          <a href="" class="mobile-menu__link">Портфоліо</a>
+          <a href="./portfolio.html" class="mobile-menu__link">Портфоліо</a>
         </li>
         <li>
-          <a href="" class="mobile-menu__link">Контакти</a>
+          <a href="#" class="mobile-menu__link">Контакти</a>
         </li>
       </ul>
 
       <ul class="mobile-contacts">
         <li>
-          <a href="" class="mobile-contacts__link-tel">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="mobile-contacts__link-tel">+38 096 111 11 11</a>
         </li>
         <li>
-          <a href="" class="mobile-contacts__link-mail">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="mobile-contacts__link-mail"
+            >info@devstudio.com</a
+          >
         </li>
       </ul>
 
