--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,17 @@
             >
           </li>
         </ul>
+
+        <button
+          class="menu-button js-open-menu"
+          type="button"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg width="40" height="40">
+            <use href="./images/icons.svg#menu-open"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
@@ -125,7 +136,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="product__desc">
+                <div class="product__desc product__desc--height">
                   <h2 class="product__name">Технокряк</h2>
                   <p class="product__tag">Веб-сайт</p>
                 </div>
@@ -562,5 +573,54 @@
         </div>
       </div>
     </footer>
+
+    <!-- Mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg class="menu-toggle__icon" width="40" height="40">
+          <use href="./images/icons.svg#menu-close"></use>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu">
+        <li>
+          <a href="./index.html" class="mobile-menu__link">Студія</a>
+        </li>
+        <li>
+          <a href="#" class="mobile-menu__link mobile-menu__link--current">Портфоліо</a>
+        </li>
+        <li>
+          <a href="#" class="mobile-menu__link">Контакти</a>
+        </li>
+      </ul>
+
+      <ul class="mobile-contacts">
+        <li>
+          <a href="tel:+380961111111" class="mobile-contacts__link-tel">+38 096 111 11 11</a>
+        </li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="mobile-contacts__link-mail"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+
+      <ul class="mobile-socials">
+        <li class="mobile-socials__item">
+          <a href="#" class="mobile-socials__link">Instagram </a>
+        </li>
+        <li class="mobile-socials__item"><a href="#" class="mobile-socials__link">Twitter</a></li>
+        <li class="mobile-socials__item"><a href="#" class="mobile-socials__link">Facebook</a></li>
+        <li class="mobile-socials__item"><a href="#" class="mobile-socials__link">LinkedIn</a></li>
+      </ul>
+    </div>
+
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
